weapon update and bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
@@ -645,15 +645,15 @@ sets:
   叶绿魔法套装:
     lore:
     - ''
-    - §a套装效果：每秒朝最近的敌人射出叶片
+    - §a套装效果：朝最近的敌人射出叶片
   叶绿射手套装:
     lore:
     - ''
-    - §a套装效果：每秒朝最近的敌人射出叶片
+    - §a套装效果：朝最近的敌人射出叶片
   叶绿战士套装:
     lore:
     - ''
-    - §a套装效果：每秒朝最近的敌人射出叶片
+    - §a套装效果：朝最近的敌人射出叶片
   幽灵吸血套装:
     lore:
     - ''
