--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -327,6 +327,7 @@
       - 恶魔矿:30:87
       - 腐化种子:1:3
       - 泪刃:1:1:0.1
+      - 死亡凝视法杖:1:1:0.3333
   菌生蟹:
     1:
       giveAllItems: false
@@ -378,6 +379,8 @@
       - 过载凝胶发射器
       - 深渊之书
       - 诡触之书
+      - 腐化史莱姆召唤杖
+      - 血腥史莱姆召唤杖
     2:
       items:
       - 魔能谐振仪
