--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -190,6 +190,7 @@
     drop:
         - "铜币:200:400:1"
         - "骨头:1:3:0.9807"
+        - "死灵骨髓杖:1:1:0.01"
         - "手枪:1:1:0.01"
         - "水矢:1:1:0.01"
         - "蓝月:1:1:0.01"
