--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -300,6 +300,7 @@
       - 海星:30:40
       - 贝壳:30:40
       - 天蓝石:1:1:0.3333
+      - 伏打凝胶:1:1:0.3333
     2:
       giveAllItems: false
       items:
@@ -454,6 +455,7 @@
     2:
       items:
       - 海之烧灼:1:1:0.1
+      - 核燃料棒:1:1:0.3333
   毁灭者:
     1:
       items:
@@ -547,6 +549,7 @@
       - 星舰电池:12:16
       - 星尘:30:40
       - 坠星:20:30
+      - 星爆核心:1:1:0.3333
   石巨人:
     1:
       giveAllItems: false
