--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -26,18 +26,24 @@
         - "铜币:100:150:1"
         - "钨钢金属废料:1:4:1"
         - "能源核心:1:1:0.35"
+        - "可疑镀层:1:3:0.5"
+        - "神秘电路:1:3:0.5"
         - "钨钢电池:1:1:0.07"
 钨钢回转器:
     drop:
         - "铜币:100:150:1"
         - "钨钢金属废料:1:4:1"
         - "能源核心:1:1:0.35"
+        - "可疑镀层:1:3:0.5"
+        - "神秘电路:1:3:0.5"
         - "钨钢电池:1:1:0.07"
 钨钢悬浮坦克:
     drop:
         - "铜币:100:150:1"
         - "钨钢金属废料:1:4:1"
         - "能源核心:1:1:0.35"
+        - "可疑镀层:1:3:0.5"
+        - "神秘电路:1:3:0.5"
         - "钨钢电池:1:1:0.07"
 钨钢漫步者:
     drop:
@@ -45,6 +51,8 @@
         - "钨钢金属废料:1:4:1"
         - "钨钢屏障生成仪:1:1:0.1"
         - "能源核心:1:1:0.35"
+        - "可疑镀层:1:3:0.5"
+        - "神秘电路:1:3:0.5"
         - "钨钢电池:1:1:0.07"
 水母:
     drop:
