--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
@@ -180,6 +180,8 @@ shops:
     - 贝壳刃弓
     - 珊瑚手炮
     - 附魔海螺
+    血肉之墙:
+    - 始源暗影炎
     极地之灵:
     - 霜牙冲击波
     - 冰坠三叉戟
@@ -247,13 +249,13 @@ shops:
     - 拉杆
     - 南瓜种子
     - 大自然的恩赐
+    - 蛛丝
     骷髅王:
     - 地牢砖
     世纪之花:
     - 丛林蜥蜴砖
   裁缝:
     default:
-    - 蛛丝
     - 苦力怕时装
     - 绵羊时装
     - 僵尸时装
