--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/buff.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/buff.yml
@@ -20,6 +20,23 @@ buffConflicts:
   5:
     燃烧: 0
     黑曜石皮: 1
+  # 灵魂浮雕系列buff
+  6:
+    灵魂恢复: 0
+    神圣之辉: 1
+  7:
+    灵魂防御: 0
+    神圣之佑: 1
+  8:
+    灵魂力量: 0
+    神圣之力: 1
+  # 冷却类buff
+  9:
+    血肉图腾: 0
+    血肉图腾冷却: 1
+  10:
+    钨钢屏障: 0
+    保护矩阵充能: 1
 
 effects:
   中毒:
@@ -319,16 +336,6 @@ effects:
       speedMulti: 0.1
       regen: 6
     tooltip: 所有属性大幅提升
-  怒气模式:
-    isBuff: true
-    attributes:
-      damageMulti: 0.35
-    tooltip: 增加35%伤害
-  肾上腺素:
-    isBuff: true
-    attributes:
-      damageMulti: 2
-    tooltip: 增加200%伤害
   圣骑士护盾:
     isBuff: true
     tooltip: 代替附近的队友承受部分伤害
@@ -337,12 +344,6 @@ effects:
     attributes:
         damageTakenMulti: -0.15
     tooltip: 所受伤害减少15%
-  暴君之怒:
-    isBuff: true
-    attributes:
-        damageMeleeMulti: 0.3
-        critMelee: 10
-    tooltip: 增加30%近战伤害和10%近战暴击率
   伤害星云:
     isBuff: true
     attributes:
@@ -376,3 +377,61 @@ effects:
     tooltip: 每秒魔力再生增加 20
   魔力星云3:
     tooltip: 每秒魔力再生增加 30
+  魔力烧蚀:
+    isBuff: false
+    tooltip: 过多的魔力正在烧蚀你的身心
+  神圣之辉:
+    isBuff: true
+    attributes:
+        regen: 6
+    tooltip: 恢复生命
+  神圣之佑:
+    isBuff: true
+    attributes:
+        defence: 16
+        damageTakenMulti: -0.04
+    tooltip: 增加16点防御力和4%伤害减免
+  神圣之力:
+    isBuff: true
+    attributes:
+        damageSummonMulti: 0.1
+    tooltip: 增加10%召唤伤害
+  灵魂恢复:
+    isBuff: true
+    attributes:
+        regen: 4
+    tooltip: 恢复生命
+  灵魂防御:
+    isBuff: true
+    attributes:
+        minionLimit: 3
+        damageSummonMulti: 0.1
+        damageTakenMulti: -0.03
+    tooltip: 增加12点防御力和3%伤害减免
+  灵魂力量:
+    isBuff: true
+    attributes:
+        damageSummonMulti: 0.1
+    tooltip: 增加10%召唤伤害
+  血肉图腾:
+    isBuff: true
+    attributes:
+        damageSummonMulti: -0.5
+    tooltip: 下一次接触伤害减半
+  血肉图腾冷却:
+    isBuff: false
+    tooltip: 血肉图腾效果冷却
+  钨钢屏障:
+    isBuff: true
+    attributes:
+        defence: 20
+    tooltip: 保护你并为你阻挡伤害
+  保护矩阵充能:
+    isBuff: false
+    tooltip: 钨钢屏障被摧毁，正在充能
+  暴君之怒:
+    isBuff: true
+    attributes:
+        damageMeleeMulti: 0.3
+        critMelee: 10
+    tooltip: 增加30%近战伤害和10%近战暴击率
