--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -543,22 +543,6 @@
     defence: 2
   worth: 20000
   rarity: 1
-钨钢屏障生成仪:
-  item: LEASH
-  lore:
-  - §r[饰品]
-  attributes:
-    defence: 10
-  worth: 200000
-  rarity: 1
-钨钢电池:
-  item: LEASH
-  lore:
-  - §r[饰品]
-  attributes:
-    damageSummonMulti: 0.07
-  worth: 200000
-  rarity: 1
 鲨牙项链:
   item: LEASH
   lore:
@@ -590,7 +574,7 @@
   item: LEASH
   lore:
   - §r[饰品]
-  - §r算作火箭靴
+  - §r算作鞋子
   worth: 1000000
   rarity: 3
 蠕虫围巾:
@@ -866,6 +850,7 @@
   item: LEASH
   lore:
   - §r[饰品]
+  - §r算作鞋子
   attributes:
     speedMulti: 0.1
   worth: 1000000
@@ -874,7 +859,7 @@
   item: LEASH
   lore:
   - §r[饰品]
-  - §r算作火箭靴
+  - §r算作鞋子
   attributes:
     speedMulti: 0.1
   worth: 2000000
@@ -883,9 +868,18 @@
   item: LEASH
   lore:
   - §r[饰品]
+  - §r算作气球
   - §r按空格释放二段跳
   worth: 500000
   rarity: 1
+气球束:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r算作气球
+  - §r按空格释放二段跳，一共可以释放两次二段跳
+  worth: 2000000
+  rarity: 8
 岩浆石:
   item: LEASH
   lore:
@@ -1039,7 +1033,7 @@
   - §r定期释放能伤害敌人的挥发明胶
   - §r“挥发明胶青春版”
   worth: 100000
-  rarity: 2
+  rarity: 1
 挥发明胶:
   item: LEASH
   lore:
@@ -1090,6 +1084,505 @@
     damageSummonMulti: 0.15
   worth: 5000000
   rarity: 8
+天蓝石:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    speedMulti: 0.1
+    flightTimeMulti: 0.1
+  worth: 400000
+  rarity: 2
+天使之靴:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r算作鞋子
+  attributes:
+    speedMulti: 0.12
+    flightTimeMulti: 0.1
+  worth: 7200000
+  rarity: 6
+活力凝胶:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    speedMulti: 0.1
+  worth: 200000
+  rarity: 3
+女妖指环:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    speedMulti: 0.1
+    flightTimeMulti: 0.2
+  worth: 800000
+  rarity: 3
+天羽之翼:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r算作翅膀
+  - §r按住空格短暂飞行
+  - §r飞行时间结束后按住空格缓降
+  worth: 800000
+  rarity: 3
+星光之翼:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r算作翅膀
+  - §r按住空格短暂飞行
+  - §r飞行时间结束后按住空格缓降
+  attributes:
+    damageMulti: 0.05
+    crit: 5
+  worth: 4800000
+  rarity: 5
+极寒之魂:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r算作翅膀
+  - §r按住空格短暂飞行
+  - §r飞行时间结束后按住空格缓降
+  - §r近战攻击造成霜火减益
+  attributes:
+    damageMulti: 0.07
+    buffInflictMelee: 霜火|40|1
+  worth: 4800000
+  rarity: 5
+气球之母:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r算作气球
+  - §r允许使用四次二段跳
+  worth: 7200000
+  rarity: 6
+玉金喷射器:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r算作翅膀
+  - §r按住空格短暂飞行
+  - §r飞行时间结束后按住空格缓降
+  - §r“优雅地音速飞行”
+  worth: 9600000
+  rarity: 7
+幽渊斗篷:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r算作翅膀
+  - §r按住空格短暂飞行
+  - §r飞行时间结束后按住空格缓降
+  - §r“由深渊的怒火驱动”
+  attributes:
+    damageMulti: 0.05
+  worth: 12000000
+  rarity: 8
+逸界之翼:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r算作翅膀
+  - §r按住空格短暂飞行
+  - §r飞行时间结束后按住空格缓降
+  attributes:
+    damageMulti: 0.05
+    crit: 5
+  worth: 16000000
+  rarity: 10
+再生护符:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r作为代价，生命值在高于生命上限一半时生命再生将减少玩家生命
+  attributes:
+    regen: 12
+  worth: 9600000
+  rarity: 7
+绚彩明胶:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    maxHealth: 40
+    maxMana: 20
+    speedMulti: 0.1
+    regen: 2
+  worth: 4800000
+  rarity: 5
+生命凝胶:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    maxHealth: 40
+  worth: 200000
+  rarity: 1
+魔力凝胶:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    maxMana: 20
+  worth: 200000
+  rarity: 1
+神射手胸针:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageRangedMulti: 0.1
+    critRanged: 5
+    ammoConsumptionRate: -0.2
+    projectileSpeedMulti: 0.2
+    projectileSpeedArrowMulti: 0.2
+  worth: 12000000
+  rarity: 8
+灾厄符章:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r将大范围内的魔力星牵引向自身
+  attributes:
+    damageMagicMulti: 0.15
+    maxMana: 100
+    manaUseMulti: -0.1
+  worth: 12000000
+  rarity: 8
+混乱石:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r使用魔力药水时获得魔力烧蚀而非魔力疾病
+  worth: 9600000
+  rarity: 7
+魔能谐振仪:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r高于50%总魔力时，减少6点生命恢复速度
+  - §r造成魔法伤害时触发治疗效果
+  - §r伤害越高治疗效果越强；魔力越少治疗效果越弱
+  attributes:
+    maxMana: 50
+    damageMagicMulti: 0.06
+  worth: 2400000
+  rarity: 4
+魔能谐振仪:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r高于50%总魔力时，减少6点生命恢复速度
+  - §r造成魔法伤害时触发治疗效果
+  - §r伤害越高治疗效果越强；魔力越少治疗效果越弱
+  attributes:
+    maxMana: 50
+    damageMagicMulti: 0.06
+  worth: 2400000
+  rarity: 4
+神圣符文:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r仆从攻击敌人时，玩家将获得下列增益中的任意一个：
+  - §r神圣之辉：+6生命再生速度
+  - §r神圣之佑：增加16点防御力和4%伤害减免
+  - §r神圣之力：+10%召唤伤害
+  worth: 4800000
+  rarity: 5
+灵魂浮雕:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r仆从攻击敌人时，玩家将获得下列增益中的任意一个：
+  - §r灵魂恢复：+4生命再生速度
+  - §r灵魂防御：增加12点防御力和3%伤害减免
+  - §r灵魂力量：+10%召唤伤害
+  worth: 400000
+  rarity: 2
+斯塔提斯的诅咒:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后造成神圣之火减益
+  - §r不能与下位合成同时装备
+  attributes:
+    minionLimit: 3
+    damageSummonMulti: 0.1
+    buffInflictSummon: 神圣之火|60|1
+  worth: 20000000
+  rarity: 10
+斯塔提斯的祝福:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后造成神圣之火减益
+  attributes:
+    minionLimit: 2
+    damageSummonMulti: 0.1
+    buffInflictSummon: 神圣之火|60|1
+  worth: 9600000
+  rarity: 7
+始源暗影炎:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后造成暗影焰减益
+  attributes:
+    minionLimit: 1
+    buffInflictSummon: 暗影焰|60|1
+  worth: 4800000
+  rarity: 5
+玷星之源:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后造成幻星感染减益
+  - §r不能与下位合成同时装备
+  attributes:
+    minionLimit: 2
+    damageSummonMulti: 0.07
+    buffInflictSummon: 幻星感染|40|1
+  worth: 12000000
+  rarity: 8
+星爆核心:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后小概率造成幻星感染减益
+  attributes:
+    minionLimit: 1
+    buffInflictSummon: 幻星感染|40|0.1
+  worth: 9600000
+  rarity: 7
+凝胶充能电池:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后有概率造成带电减益
+  attributes:
+    minionLimit: 1
+    damageSummonMulti: 0.07
+    buffInflictSummon: 带电|40|0.2
+  worth: 2400000
+  rarity: 4
+核燃料棒:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后造成辐射减益
+  attributes:
+    minionLimit: 1
+    buffInflictSummon: 辐射|40|1
+  worth: 4800000
+  rarity: 5
+伏打凝胶:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r召唤物命中后有概率造成带电减益
+  attributes:
+    minionLimit: 1
+    buffInflictSummon: 带电|40|0.2
+  worth: 400000
+  rarity: 2
+钨钢电池:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageSummonMulti: 0.07
+  worth: 200000
+  rarity: 1
+融合之脑:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMulti: 0.1
+    crit: 3
+    damageSummonMulti: 0.03
+  worth: 2400000
+  rarity: 4
+腐烂之脑:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMulti: 0.1
+  worth: 800000
+  rarity: 3
+旱海鲨牙项链:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    armorPenetration: 20
+    damageMulti: 0.06
+  worth: 9600000
+  rarity: 7
+恼怒项链:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r当玩家的生命值低于50%时，伤害增加20%
+  worth: 12000000
+  rarity: 7
+利维坦龙涎香:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMulti: 0.05
+    damageTakenMulti: -0.05
+    defence: 20
+  worth: 9600000
+  rarity: 7
+终结虚空:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r免疫硫磺火减益
+  attributes:
+    damageMulti: 0.12
+    buffImmune: 硫磺火
+  worth: 12000000
+  rarity: 8
+灾劫虚空:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    damageMulti: 0.12
+    damageTakenMulti: 0.1
+  worth: 9600000
+  rarity: 7
+焦热地狱:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r你的任何攻击都会附带硫磺火减益
+  attributes:
+    buffInflict: 硫磺火|80|1
+  worth: 4800000
+  rarity: 5
+归一心元石:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §6专家模式物品
+  - §r广大泰拉玩家的精神结晶
+  - §r在最早时期你会获得所有属性的微量增幅
+  - §r击败里程碑级别的BOSS后增幅更加强力
+  - §r减少伤害性减益造成的伤害
+  - §r感谢众多支持者的努力，让泰拉瑞亚以及灾厄成为现实
+  worth: 12000000
+  rarity: 1000
+阿斯加德之英勇:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r双击一个方向可以冲刺
+  attributes:
+    defence: 32
+    damageTakenMulti: -0.05
+    maxHealth: 40
+  worth: 9600000
+  rarity: 7
+宝光盾牌:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r双击一个方向可以冲刺
+  attributes:
+    defence: 16
+    damageTakenMulti: -0.08
+    maxHealth: 40
+  worth: 7200000
+  rarity: 5
+海之盾:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    defence: 4
+    regen: 4
+    speedMulti: 0.1
+  worth: 7200000
+  rarity: 5
+神圣护符:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r增加受伤无敌帧
+  - §r提供生命恢复并减少治疗药水的冷却时间
+  attributes:
+    regen: 2
+    invulnerabilityTick: 8
+  worth: 16000000
+  rarity: 9
+血契:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r最大生命值翻倍，但你有25%的概率被暴击
+  attributes:
+    maxHealthMulti: 1
+  worth: 12000000
+  rarity: 8
+血肉图腾:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r减半接触伤害，此效果有20秒冷却时间
+  worth: 12000000
+  rarity: 8
+钨钢屏障生成仪:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r为你提供一个钨钢屏障
+  - §r屏障在吸收80点伤害后破碎，破碎后进入20秒冷却
+  - §r屏障存在时你额外获得20防御
+  worth: 200000
+  rarity: 1
+阴阳吸星石:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    maxHealth: 40
+    maxMana: 20
+    speedMulti: 0.05
+    damageTakenMulti: -0.15
+    regen: 4
+  worth: 16000000
+  rarity: 9
+舐火甲壳:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r坚固沉重的护具，并不是大理石制成的
+  attributes:
+    defence: 72
+    speedMulti: -0.35
+  worth: 4800000
+  rarity: 5
+魔鬼之庇护:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  - §r免疫硫磺火减益
+  attributes:
+    buffImmune: 硫磺火
+  worth: 4800000
+  rarity: 5
 钓鱼竿:
   item: FISHING_ROD
   lore:
