--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
@@ -2797,6 +2797,204 @@ TINKER_WORKBENCH:
     requireItem:
     - 圣骑士护盾
     - 冰冻海龟壳
+  '24':
+    requireLevel: 1
+    resultItem: 气球束
+    requireItem:
+    - 跳跃之瓶
+    - 跳跃之瓶
+  '25':
+    requireLevel: 1
+    resultItem: 天使之靴
+    requireItem:
+    - 幽灵靴
+    - 女妖指环
+    - 日光精华:5
+    - 视域之魂
+    - 力量之魂
+    - 恐惧之魂
+  '26':
+    requireLevel: 1
+    resultItem: 女妖指环
+    requireItem:
+    - 天蓝锭:2
+    - 羽毛:5
+    - 丝绸:2
+  '27':
+    requireLevel: 1
+    resultItem: 天羽之翼
+    requireItem:
+    - 天蓝锭:5
+    - 羽毛:5
+    - 丝绸:5
+  '28':
+    requireLevel: 1
+    resultItem: 星光之翼
+    requireItem:
+    - 寒元锭:5
+    - 飞翔之魂:20
+  '29':
+    requireLevel: 1
+    resultItem: 气球之母
+    requireItem:
+    - 气球束
+    - 力量之魂
+    - 视域之魂
+    - 恐惧之魂
+  '30':
+    requireLevel: 1
+    resultItem: 玉金喷射器
+    requireItem:
+    - 永恒锭:5
+    - 飞翔之魂:20
+  '31':
+    requireLevel: 1
+    resultItem: 幽渊斗篷
+    requireItem:
+    - 熔渣锭:5
+    - 混乱核心
+    - 飞翔之魂:20
+  '32':
+    requireLevel: 1
+    resultItem: 逸界之翼
+    requireItem:
+    - 冥思构造体:14
+    - 夜明锭:10
+    - 飞翔之魂:20
+  '33':
+    requireLevel: 1
+    resultItem: 绚彩明胶
+    requireItem:
+    - 生命凝胶
+    - 魔力凝胶
+    - 活力凝胶
+    - 光明之魂:2
+    - 暗影之魂:2
+  '34':
+    requireLevel: 1
+    resultItem: 神射手胸针
+    requireItem:
+    - 灾劫核心:2
+    - 游侠徽章
+  '35':
+    requireLevel: 1
+    resultItem: 灾厄符章
+    requireItem:
+    - 天界徽章
+    - 灾厄尘:15
+    - 熔渣锭:5
+  '36':
+    requireLevel: 1
+    resultItem: 神圣符文
+    requireItem:
+    - 灵魂浮雕
+    - 神圣锭:18
+    - 恐惧之魂:5
+    - 力量之魂:5
+    - 视域之魂:5
+  '37':
+    requireLevel: 1
+    resultItem: 灵魂浮雕
+    requireItem:
+    - 黑曜石:15
+    - 钻石:5
+  '38':
+    requireLevel: 1
+    resultItem: 斯塔提斯的诅咒
+    requireItem:
+    - 星尘碎片:10
+    - 斯塔提斯的祝福
+    - 始源暗影炎
+  '39':
+    requireLevel: 1
+    resultItem: 斯塔提斯的祝福
+    requireItem:
+    - 甲虫莎草纸
+    - 矮人项链
+    - 召唤师徽章
+    - 日光核心:5
+  '40':
+    requireLevel: 1
+    resultItem: 玷星之源
+    requireItem:
+    - 凝胶充能电池
+    - 核燃料棒
+    - 星爆核心
+    - 生命合金:3
+  '41':
+    requireLevel: 1
+    resultItem: 凝胶充能电池
+    requireItem:
+    - 钨钢电池
+    - 伏打凝胶
+    - 纯净凝胶:10
+    - 风暴之颚:2
+  '42':
+    requireLevel: 1
+    resultItem: 融合之脑
+    requireItem:
+    - 腐烂之脑
+    - 暗影之魂:3
+  '43':
+    requireLevel: 1
+    resultItem: 旱海鲨牙项链
+    requireItem:
+    - 鲨牙项链
+    - 复仇者徽章
+    - 大狂鲨鳞
+  '44':
+    requireLevel: 1
+    resultItem: 恼怒项链
+    requireItem:
+    - 复仇者徽章
+    - 永恒锭:2
+  '45':
+    requireLevel: 1
+    resultItem: 终结虚空
+    requireItem:
+    - 灾劫虚空
+    - 焦热地狱
+    - 黑曜石头骨
+    - 混乱核心
+    - 熔渣锭:3
+    - 魔鬼之庇护
+  '46':
+    requireLevel: 1
+    resultItem: 阿斯加德之英勇
+    requireItem:
+    - 黑曜石护盾
+    - 宝光盾牌
+    - 海之盾
+    - 克苏鲁之眼盾
+    - 灾劫核心
+  '47':
+    requireLevel: 1
+    resultItem: 宝光盾牌
+    requireItem:
+    - 寒元锭:5
+    - 水晶碎块:10
+  '48':
+    requireLevel: 1
+    resultItem: 海之盾
+    requireItem:
+    - 海星:5
+    - 海洋残渣:5
+  '49':
+    requireLevel: 1
+    resultItem: 神圣护符
+    requireItem:
+    - 神话护身符
+    - 十字项链
+    - 炫星锭:10
+    - 海棱晶:15
+  '50':
+    requireLevel: 1
+    resultItem: 阴阳吸星石
+    requireItem:
+    - 绚彩明胶
+    - 软体动物外壳
+    - 炫星锭:10
+    - 星系异石:5
 远古操纵机:
   '1':
     requireLevel: 1
